# astra-agent

./: .gitignore  README.md  pyproject.toml
docs/: API-CALLS.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING-STARTED.md  MODULES.md  SECURITY.md
examples/customer-context/: architecture.md
infra/: app.py
infra/lambda/: handler.py
infra/stacks/: astra_stack.py
specs/: context.md  design.md  requirements.md
src/astra/: __init__.py  __main__.py  agent.py  assessment.py  chat.py  diagram.py  discovery.py  interactive.py  models.py  preflight.py
src/astra/checklist/: __init__.py  resilience.py  saas.py  security.py
src/astra/knowledge/resilience/: resilience-lifecycle-framework.md  well-architected-reliability-pillar.md
src/astra/knowledge/saas/: saas-tenant-isolation-strategies.md  well-architected-saas-lens.md
src/astra/knowledge/security/: aws-security-best-practices.md  well-architected-security-pillar.md
src/astra/report/: __init__.py  generator.py
src/astra/tools/: __init__.py  resilience.py  saas.py  security.py
tests/: conftest.py  test_cli.py  test_report.py  test_resilience.py  test_saas.py  test_security.py
